--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <!-- PhotoFragment -->
     <dimen name="photo_description_text_size">14dp</dimen>
     <dimen name="photo_dimensions">250dp</dimen>
+    <dimen name="photo_video_source_margin">24dp</dimen>
 
     <!-- AsteroidFragment -->
     <dimen name="asteroid_text_size">14dp</dimen>
