--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="colorAccent">#03A9F4</color>
     <color name="colorTextIcons">#FFFFFF</color>
     <color name="colorTextPrimary">#212121</color>
+    <color name="colorBackground">@color/colorTextIcons</color>
     <color name="colorTextSecondary">#757575</color>
-    <color name="colorButtonDisabled">#E8E8E8</color>
 </resources>
