--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -40,6 +40,16 @@
                     android:text="@string/photo_video_source"
                     android:textAlignment="center" />
 
+                <ImageButton
+                    android:id="@+id/photo_calendar_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|top"
+                    android:background="@color/colorBackground"
+                    android:src="@drawable/ic_calendar"
+                    android:contentDescription="@string/photo_calendar_content_description"
+                    />
+
                 <Button
                     android:id="@+id/play_video_button"
                     style="@style/ButtonStyle"
