--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/photo_coordinator_layout"
-    android:background="@color/colorBackground"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground">
 
     <ScrollView
         android:id="@+id/photo_scroll_view"
@@ -31,25 +31,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/photo_video_source_text_view"
-                    style="@style/ButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/photo_video_source"
-                    android:textAlignment="center" />
-
-                <ImageButton
-                    android:id="@+id/photo_calendar_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end|top"
-                    android:background="@color/colorBackground"
-                    android:src="@drawable/ic_calendar"
-                    android:contentDescription="@string/photo_calendar_content_description"
-                    />
-
                 <Button
                     android:id="@+id/play_video_button"
                     style="@style/ButtonStyle"
@@ -61,30 +42,38 @@
                 <ImageButton
                     android:id="@+id/photo_previous_button"
                     android:layout_width="wrap_content"
-                    android:background="@color/colorBackground"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_previous"
+                    android:layout_gravity="center_vertical|start"
+                    android:background="@color/colorBackground"
                     android:contentDescription="@string/photo_previous_content_description"
-                    android:layout_gravity="center_vertical|start"/>
-
-                <ImageView
-                    android:id="@+id/photo_view"
-                    style="@style/PhotoImageView"
-                    android:layout_marginTop="@dimen/photo_video_source_margin"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/margin"
-                    android:contentDescription="@string/photo_of_the_day_content_description"
-                    tools:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/ic_previous" />
 
                 <ImageButton
                     android:id="@+id/photo_next_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorBackground"
-                    android:src="@drawable/ic_next"
-                    android:contentDescription="@string/photo_next_content_description"
                     android:layout_gravity="center_vertical|end"
-                    />
+                    android:background="@color/colorBackground"
+                    android:contentDescription="@string/photo_next_content_description"
+                    android:src="@drawable/ic_next" />
+
+                <ImageView
+                    android:id="@+id/photo_view"
+                    style="@style/PhotoImageView"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/photo_video_source_margin"
+                    android:contentDescription="@string/photo_of_the_day_content_description"
+                    android:padding="@dimen/margin"
+                    tools:src="@mipmap/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/photo_video_source_text_view"
+                    style="@style/ButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/photo_video_source"
+                    android:textAlignment="center" />
 
             </FrameLayout>
 
