--- a/app/src/main/res/layout/fragment_observatory.xml
+++ b/app/src/main/res/layout/fragment_observatory.xml
@@ -10,7 +10,7 @@
     android:layout_marginEnd="@dimen/margin"
     android:layout_marginBottom="@dimen/margin">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragment_observatory_constraint_layout"
@@ -116,5 +116,5 @@
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/observatory_visit_homepage_button" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
