Update UI in AstroAppWiget and PhotoFragment

--- a/app/src/main/res/layout/astro_app_widget.xml
+++ b/app/src/main/res/layout/astro_app_widget.xml
@@ -28,7 +28,7 @@
         android:id="@+id/widget_image_title"
         style="@style/WidgetTextViewStyle"
         android:layout_below="@id/widget_image"
-        android:layout_marginTop="@dimen/margin_list_item"
+        android:layout_margin="@dimen/margin_list_item"
         android:gravity="center_horizontal"
         tools:text="Moons near Jupiter" />
 </RelativeLayout>
