--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,8 @@
     <dimen name="photo_description_text_size">14dp</dimen>
     <dimen name="photo_dimensions">230dp</dimen>
     <dimen name="photo_video_source_margin">24dp</dimen>
+    <dimen name="youtube_dimensions">200dp</dimen>
+    <dimen name="youtube_margin_top">40dp</dimen>
 
     <!-- AsteroidFragment -->
     <dimen name="asteroid_text_size">14dp</dimen>
