--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -23,24 +23,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
             <FrameLayout
                 android:id="@+id/photo_video_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
+                android:layout_marginTop="@dimen/margin"
+                android:layout_marginStart="@dimen/margin"
+                android:layout_marginEnd="@dimen/margin"
+                android:layout_marginBottom="@dimen/margin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
-
-                <FrameLayout
-                    android:id="@+id/youtube_player_view"
-                    android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
-                    android:layout_width="@dimen/youtube_dimensions"
-                    android:layout_height="@dimen/youtube_dimensions"
-                    android:layout_marginTop="@dimen/youtube_margin_top"
-                    android:layout_marginBottom="@dimen/margin"
-                    android:layout_gravity="center"
-                    />
 
                 <ImageButton
                     android:id="@+id/photo_previous_button"
@@ -69,6 +61,13 @@
                     android:padding="@dimen/margin"
                     tools:src="@mipmap/ic_launcher" />
 
+                <ImageButton
+                    android:id="@+id/play_video_button"
+                    style="@style/ButtonStyle"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:contentDescription="@string/play_video_button"
+                    android:src="@drawable/ic_play_arrow" />
 
                 <TextView
                     android:id="@+id/photo_video_source_text_view"
@@ -107,6 +106,8 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:paddingStart="@dimen/margin_list_item"
+                android:paddingEnd="@dimen/margin_list_item"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/photo_video_frame_layout"
                 tools:text="Moons near Jupiter" />
