--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -23,66 +23,67 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/photo_video_source_text_view"
+                style="@style/ButtonStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
+                android:text="@string/photo_video_source"
+                android:textAlignment="center" />
+
             <FrameLayout
                 android:id="@+id/photo_video_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
-                android:layout_marginStart="@dimen/margin"
-                android:layout_marginEnd="@dimen/margin"
-                android:layout_marginBottom="@dimen/margin"
+                android:paddingStart="@dimen/margin"
+                android:paddingEnd="@dimen/margin"
+                android:paddingTop="@dimen/margin"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/photo_video_source_text_view">
 
                 <ImageButton
                     android:id="@+id/play_video_button"
                     style="@style/ButtonStyle"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginBottom="@dimen/margin"
                     android:contentDescription="@string/play_video_button"
                     android:src="@drawable/ic_play_arrow" />
-
-                <ImageButton
-                    android:id="@+id/photo_previous_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|start"
-                    android:background="@color/colorBackground"
-                    android:contentDescription="@string/photo_previous_content_description"
-                    android:src="@drawable/ic_previous" />
-
-                <ImageButton
-                    android:id="@+id/photo_next_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:background="@color/colorBackground"
-                    android:contentDescription="@string/photo_next_content_description"
-                    android:src="@drawable/ic_next" />
 
                 <ImageView
                     android:id="@+id/photo_view"
                     style="@style/PhotoImageView"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/photo_video_source_margin"
                     android:contentDescription="@string/photo_of_the_day_content_description"
-                    android:padding="@dimen/margin"
                     tools:src="@mipmap/ic_launcher" />
-
-
-                <TextView
-                    android:id="@+id/photo_video_source_text_view"
-                    style="@style/ButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/photo_video_source"
-                    android:textAlignment="center" />
-
             </FrameLayout>
+
+
+            <ImageButton
+                android:id="@+id/photo_previous_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout"
+                app:layout_constraintBottom_toBottomOf="@id/photo_video_frame_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@color/colorBackground"
+                android:contentDescription="@string/photo_previous_content_description"
+                android:src="@drawable/ic_previous" />
+
+            <ImageButton
+                android:id="@+id/photo_next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout"
+                app:layout_constraintBottom_toBottomOf="@id/photo_video_frame_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/colorBackground"
+                android:contentDescription="@string/photo_next_content_description"
+                android:src="@drawable/ic_next" />
 
             <ImageView
                 android:id="@+id/photo_empty_image_view"
@@ -109,9 +110,9 @@
                 style="@style/PhotoTitleTextView"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:paddingStart="@dimen/margin_list_item"
                 android:paddingEnd="@dimen/margin_list_item"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/photo_video_frame_layout"
                 tools:text="Moons near Jupiter" />
