--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,12 +4,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorButtonNormal">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/colorTextPrimary</item>
         <item name="android:textColorSecondary">@color/colorTextSecondary</item>
     </style>
 
     <!-- Theme for the full screen layout -->
-    <style name="AppBaseTheme" parent="Theme.Design.Light.NoActionBar" />
+    <style name="AppBaseTheme" parent="Theme.MaterialComponents.NoActionBar" />
 
     <style name="preferenceTheme">@style/PreferenceThemeOverlay</style>
 
