Add theme changing options (light, dark, default)

--- a/app/src/main/res/layout/asteroid_list_item.xml
+++ b/app/src/main/res/layout/asteroid_list_item.xml
@@ -99,7 +99,7 @@
         android:id="@+id/asteroid_hazardous_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorTextPrimary"
+        android:textColor="?android:attr/textColorPrimary"
         android:textAppearance="?android:textAppearanceSmall"
         app:layout_constraintEnd_toEndOf="@id/asteroid_hazardous_image"
         app:layout_constraintStart_toStartOf="@id/asteroid_hazardous_image"
