--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/photo_coordinator_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:id="@+id/photo_scroll_view"
@@ -26,22 +25,22 @@
             <TextView
                 android:id="@+id/photo_video_source_text_view"
                 style="@style/ButtonStyle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin"
                 android:text="@string/photo_video_source"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <FrameLayout
                 android:id="@+id/photo_video_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/margin"
-                android:paddingEnd="@dimen/margin"
                 android:paddingTop="@dimen/margin"
+                android:paddingEnd="@dimen/margin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/photo_video_source_text_view">
 
@@ -67,23 +66,23 @@
                 android:id="@+id/photo_previous_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout"
+                android:background="?android:attr/colorBackground"
+                android:contentDescription="@string/photo_previous_content_description"
+                android:src="@drawable/ic_previous"
                 app:layout_constraintBottom_toBottomOf="@id/photo_video_frame_layout"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@color/colorBackground"
-                android:contentDescription="@string/photo_previous_content_description"
-                android:src="@drawable/ic_previous" />
+                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout" />
 
             <ImageButton
                 android:id="@+id/photo_next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout"
+                android:background="?android:attr/colorBackground"
+                android:contentDescription="@string/photo_next_content_description"
+                android:src="@drawable/ic_next"
                 app:layout_constraintBottom_toBottomOf="@id/photo_video_frame_layout"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@color/colorBackground"
-                android:contentDescription="@string/photo_next_content_description"
-                android:src="@drawable/ic_next" />
+                app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout" />
 
             <ImageView
                 android:id="@+id/photo_empty_image_view"
@@ -149,9 +148,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:backgroundTint="@color/colorAccent"
         android:layout_marginEnd="@dimen/margin"
         android:layout_marginBottom="@dimen/margin"
+        android:backgroundTint="@color/colorAccent"
         android:contentDescription="@string/share_content_description"
         android:src="@drawable/ic_share"
         app:fabSize="normal"
