--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,15 +4,23 @@
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_refresh"
-        android:title="@string/menu_refresh"
         android:orderInCategory="2"
+        android:title="@string/menu_refresh"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_calendar"
         android:icon="@drawable/ic_calendar"
+        android:orderInCategory="1"
         android:title="@string/menu_calendar"
         android:visible="false"
-        android:orderInCategory="1"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menu_theme"
+        android:icon="@drawable/ic_style"
+        android:orderInCategory="3"
+        android:title="@string/menu_theme"
+        android:visible="true"
         app:showAsAction="ifRoom" />
 </menu>
