--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -66,6 +66,7 @@
                 android:id="@+id/photo_previous_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:tint="?android:attr/textColorPrimary"
                 android:background="?android:attr/colorBackground"
                 android:contentDescription="@string/photo_previous_content_description"
                 android:src="@drawable/ic_previous"
@@ -80,6 +81,7 @@
                 android:background="?android:attr/colorBackground"
                 android:contentDescription="@string/photo_next_content_description"
                 android:src="@drawable/ic_next"
+                android:tint="?android:attr/textColorPrimary"
                 app:layout_constraintBottom_toBottomOf="@id/photo_video_frame_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/photo_video_frame_layout" />
