--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,10 @@
-<resources >
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <!-- Default screen margins and elevations, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="margin">16dp</dimen>
     <dimen name="margin_list_item">8dp</dimen>
-    <dimen name="image_dimensions">48dp</dimen>
     <dimen name="app_bar_layout_main_elevation">4dp</dimen>
     <dimen name="fragment_margin_start">0dp</dimen>
     <dimen name="detail_toolbar_elevation">2dp</dimen>
@@ -19,8 +19,9 @@
     <dimen name="youtube_margin_top">40dp</dimen>
 
     <!-- AsteroidFragment -->
-    <dimen name="asteroid_text_size">14dp</dimen>
-    <dimen name="guideline_start">193dp</dimen>
+    <dimen name="guideline_start">175dp</dimen>
+    <dimen name="asteroid_text_size">13dp</dimen>
+    <dimen name="image_dimensions">36dp</dimen>
 
     <!-- ObservatoryListFragment -->
     <dimen name="observatory_list_item_margin">72dp</dimen>
